todays project which is giving a error

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,10 @@
         <activity android:name=".recycler_view_example.RecyclerViewExample">
 
         </activity>
-        <activity android:name=".user_details.UserDetailsActivity">
+        <activity android:name=".user_details.UserDetailsActivity"
+            />
 
-        </activity>
+
     </application>
 
 </manifest>
